fixed long contract names truncation issue

--- a/apps/block_scout_web/assets/css/_layout.scss
+++ b/apps/block_scout_web/assets/css/_layout.scss
@@ -8,3 +8,10 @@
     background-color: #fbfafc;
   }
 }
+
+.truncated {
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
